@@ -41,7 +41,8 @@ Bugs fixed:
 - 2736593 Null/No NewValue of SetProperty causes segfault
 - 2736627 The type of NewValue is not checked at free
 - 2780152 SetProperty without NewValue gets segfault
-- 2799756  Bad xml for Array of embedded instance out parameters
+- 2799756 Bad xml for Array of embedded instance out parameters
+- 2804477 SFCB doesn't properly parse content-length from some clients
 
 Changes in 1.3.3
 ================
